@@ -58,6 +58,8 @@ dillo-2.2 [??]
  - Allow keysyms in keysrc.
  - Improve cookie attribute value parsing (BUG 819)
  - Clean up cookie expiration/replacement
+ - Clean up cookie domain/path.
+ - Explicitly check installation bindir for dpid (BUG 930)
    Patches: corvid
 +- Support for the letter-spacing property.
    Patch: Johannes Hofmann, corvid
